--- a/showcase-temp.html
+++ b/showcase-temp.html
@@ -27,7 +27,7 @@
           <p>Making papers and other scientific reports easier to read</p>
           <div class="navigation">
             <a class="single-nav" href="people.html">People</a>
-            <a class="single-nav" href="publication.html">Publication</a>
+            <a class="single-nav" href="publication.html">Publications</a>
             <a class="single-nav" href="workshop.html">Workshop</a>
             <a class="single-nav" href="gallery.html">Gallery</a>
           </div>
